[package]
name = "ndb"
version = "0.1.0"
edition = "2021"
include = [
	"src/**/*.rs",
	"Cargo.toml",
]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.10", features = ["derive"] }
sqlparser = "0.13.0"
subway = "0.1.2"
lazy_static = "1.4.0"
anyhow = "1.0.53"
