[package]
name = "ndb"
version = "0.1.0"
edition = "2021"
include = [
	"src/**/*.rs",
	"Cargo.toml",
]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.10", features = ["derive"] }
sqlparser = "0.13.0"
convenient-skiplist = "1.0.3"
crossbeam = "0.8.0"
lazy_static = "1.4.0"
anyhow = "1.0.53"
serde = "1.0.136"
bincode = "1.3.3"
